[package]
name = "osu-map-analyzer"
version = "0.2.2"
authors = ["yorunoken <me@yorunoken.com>"]
edition = "2021"
description = "A library for analyzing osu! beatmaps"
repository = "https://github.com/yorunoken/osu-map-analyzer-lib"
documentation = "https://docs.rs/osu-map-analyzer"
license = "Apache-2.0"
readme = "README.md"
keywords = ["osu", "beatmap", "analysis"]
categories = ["games"]

[dependencies]
rosu-map = "0.1.2"
serde = { version = "1.0", features = ["derive"] }

[features]
default = []
serialize = []
